feat(isthumus): extract isthmus CLI into isthmus-cli project
This avoid transitive dependencies on graal-sdk and picocli components
for projects that consume isthmus as a library.